# warehouse-to-go

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
dbt/: README.md  config.yml  dbt_project.yml
dbt/models/: sources.yml
dbt/models/sf1/: tpch_sf1_customer.sql  tpch_sf1_lineitem.sql  tpch_sf1_nation.sql  tpch_sf1_orders.sql  tpch_sf1_part.sql  tpch_sf1_partsupp.sql  tpch_sf1_region.sql  tpch_sf1_supplier.sql
dbt/models/sf10/: tpch_sf10_customer.sql  tpch_sf10_lineitem.sql  tpch_sf10_nation.sql  tpch_sf10_orders.sql  tpch_sf10_part.sql  tpch_sf10_partsupp.sql  tpch_sf10_region.sql  tpch_sf10_supplier.sql
dbt/models/sf100/: tpch_sf100_customer.sql  tpch_sf100_lineitem.sql  tpch_sf100_nation.sql  tpch_sf100_orders.sql  tpch_sf100_part.sql  tpch_sf100_partsupp.sql  tpch_sf100_region.sql  tpch_sf100_supplier.sql
dbt/models/sf1000/: tpch_sf1000_customer.sql  tpch_sf1000_lineitem.sql  tpch_sf1000_nation.sql  tpch_sf1000_orders.sql  tpch_sf1000_part.sql  tpch_sf1000_partsupp.sql  tpch_sf1000_region.sql  tpch_sf1000_supplier.sql
dbt/models/sf100tcl/: tpcds_sf100tcl_call_center.sql  tpcds_sf100tcl_catalog_page.sql  tpcds_sf100tcl_catalog_returns.sql  tpcds_sf100tcl_catalog_sales.sql  tpcds_sf100tcl_customer.sql  tpcds_sf100tcl_customer_address.sql  tpcds_sf100tcl_customer_demographics.sql  tpcds_sf100tcl_date_dim.sql  tpcds_sf100tcl_household_demographics.sql  tpcds_sf100tcl_income_band.sql  tpcds_sf100tcl_inventory.sql  (+13 more)
warehouse_to_go/: cli.py
warehouse_to_go/extractor/: manifest_parser.py  snowflake_extractor.py
warehouse_to_go/utils/: config.py
(+24 files in other folders)
